--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-hello world
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Gram Tools</title>
+	<link rel="icon" href="images/loginAlien.png">
+	<link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+
+<div id="wrapper">
+	<div id="head">
+		<div id="logo">
+			<img src="images/logoAlien.png" alt="logo">
+		</div>
+		<div id="intro">
+			<p class="lang-cn">GramTools是一个工具箱的集锦，志在提高工作效率。缩写刚好是GT，就是用了外星人GT作为图标</p>
+			<p class="lang-cn">它是一个免费软件。</p>
+		</div>
+	</div>
+
+	<div id="capture">
+		<img src="images/capture.png" alt="capture">
+	</div>
+
+	<div id="detail">
+		<div id="download">
+			<a href="https://github.com/oldj/SwitchHosts/releases">
+				<span class="lang-cn">下载</span>
+			</a>
+		</div>
+
+		<div id="features">
+			<h2>
+				<span class="lang-cn">功能</span>
+			</h2>
+
+			<ul>
+				<li>
+					<img src="images/feature_1.png" alt="feature 1">
+					<p class="lang-cn">JSON格式化</p>
+				</li>
+				<li>
+					<img src="images/feature_2.png" alt="feature 2">
+					<p class="lang-cn">文本DIFF</p>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div id="foot">
+		<p class="copyright">
+			Project maintained by 
+			<a href="https://github.com/ritoyantools/ritoyantools.github.io">ritoyantools</a></p>
+	</div>
+</div>
+</body>
+</html>
