--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<div id="detail">
 		<div id="download">
-			<a href="https://github.com/oldj/SwitchHosts/releases">
+			<a href="https://github.com/oldj/SwitchHosts/releases" id="btn-download">
 				<span class="lang-cn">下载</span>
 			</a>
 		</div>
