--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<title>Gram Tools</title>
 	<link rel="icon" href="images/loginAlien.png">
 	<link rel="stylesheet" href="css/main.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115043509-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-115043509-1');
+    </script>
 </head>
 
 <body>
