--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
 	<title>Gram Tools</title>
@@ -15,6 +14,7 @@
 
       gtag('config', 'UA-115043509-1');
     </script>
+
 </head>
 
 <body>
@@ -25,8 +25,13 @@
 			<img src="images/logoAlien.png" alt="logo">
 		</div>
 		<div id="intro">
-			<p class="lang-cn">GramTools是一个工具箱的集锦，志在提高工作效率。缩写刚好是GT，就是用了外星人GT作为图标</p>
-			<p class="lang-cn">它是一个免费软件。</p>
+			<p class="lang-cn">		
+				GramTools是一个工具箱的集锦，志在提高工作效率。缩写刚好是GT，就是用了外星人GT作为图标
+			</p>
+
+			<p class="lang-cn">
+				GramTools is a collection of development tools！
+			</p>
 		</div>
 	</div>
 
@@ -40,30 +45,40 @@
 				<span class="lang-cn">下载</span>
 			</a>
 		</div>
-
 		<div id="features">
 			<h2>
 				<span class="lang-cn">功能</span>
 			</h2>
+			<hr>
 
 			<ul>
 				<li>
 					<img src="images/feature_1.png" alt="feature 1">
-					<p class="lang-cn">JSON格式化</p>
+					<p class="lang-cn" style="margin-bottom:  0;">JSON格式化</p>
+					<p class="lang-cn">json format</p>
 				</li>
 				<li>
 					<img src="images/feature_2.png" alt="feature 2">
-					<p class="lang-cn">文本DIFF</p>
+					<p class="lang-cn" style="margin-bottom:  0;">文本DIFF</p>
+					<p class="lang-cn">text diff</p>
 				</li>
 			</ul>
 		</div>
 	</div>
 
 	<div id="foot">
-		<p class="copyright">
-			Project maintained by 
-			<a href="https://github.com/ritoyantools/ritoyantools.github.io">ritoyantools</a></p>
-	</div>
+		<p style="line-height: 30px;">
+			<iframe style="vertical-align: middle;" src="https://ghbtns.com/github-btn.html?user=aizuyan&repo=gram-tools&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+			<a target="_blank" href="https://github.com/aizuyan/gram-tools">Fork</a>
+			or
+			<a target="_blank" href="https://github.com/aizuyan/gram-tools/issues">Feedback</a>
+			on GitHub
+		</p>
+		<p>
+			<a target="_blank" style="height: 30px;line-height: 30px;font-size: 20px;" href="https://weibo.com/u/5824742984"><img src="images/weibo.png" width="20px">燕睿涛Liam</a>
+		</p>
+		<p class="copyright">Project maintained by <a href="https://github.com/ritoyantools/ritoyantools.github.io">ritoyantools</a></p>
+	</div>	
 </div>
 </body>
 </html>
